# revenue-project

./: .gitignore  END_TO_END_FLOW_VERIFICATION.md  MCP_IMPLEMENTATION.md  MCP_TEST_RESULTS.txt  README.md  main.py  pyproject.toml  test_api_usage_mcp_e2e.py  test_comprehensive_bills.py  test_mcp_query.py  verification_generated_report.json  verification_mcp_report.json  verification_report.json
api/: __init__.py  allocation_metrics.py  metrics.py  models.py
mcp_clients/: __init__.py  api_usage_mcp_client.py
mcp_servers/: README.md  allocation_usage_mcp.py  api_usage_mcp.py
verification/: README.md  __init__.py  comparator.py  pdf_parser.py  reporting.py  requirements.txt  runner.py
verification/reports/: api_report.json  mcp_report.json
verification/tests/: test_verification.py
verification/tests/fixtures/: generated_bills_payload.json  sample_bill_request.json
